# rusts

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  perf_test_20260205_144314.json  perf_test_20260205_144314.md  rusts.yml
benchmarks/: README.md  benchmark.py  run_benchmark.sh  trips_queries.sql
benchmarks/em/: README.md  em_benchmark.py  em_queries.sql  em_report.md  em_results.csv  generate_em_data.py  load_em_data.sh
crates/rusts-aggregation/: Architecture.md  Cargo.toml
crates/rusts-aggregation/src/: continuous.rs  downsample.rs  error.rs  lib.rs
crates/rusts-api/: Cargo.toml
crates/rusts-api/src/: auth.rs  error.rs  handlers.rs  lib.rs  line_protocol.rs  memory.rs  router.rs
crates/rusts-cluster/: Architecture.md  Cargo.toml
crates/rusts-cluster/src/: config.rs  error.rs  lib.rs  replication.rs  router.rs  shard.rs
crates/rusts-compression/: Cargo.toml
crates/rusts-compression/benches/: compression.rs
crates/rusts-compression/src/: bits.rs  block.rs  dictionary.rs  error.rs  float.rs  integer.rs  lib.rs  timestamp.rs
crates/rusts-core/: Architecture.md  Cargo.toml
crates/rusts-core/src/: error.rs  lib.rs  parallel.rs  types.rs
crates/rusts-endpoint-monitor-simulator/: Cargo.toml
crates/rusts-endpoint-monitor-simulator/src/: config.rs  fleet.rs  lib.rs  main.rs  metrics.rs  queries.rs  report.rs  workload.rs  writer.rs
crates/rusts-importer/: Architecture.md  Cargo.toml
crates/rusts-importer/src/: error.rs  lib.rs  main.rs  parquet.rs  writer.rs
crates/rusts-index/: Architecture.md  Cargo.toml
crates/rusts-index/src/: bloom.rs  error.rs  lib.rs  series.rs  tag.rs
crates/rusts-pgwire/: Cargo.toml
crates/rusts-pgwire/src/: backend.rs  encoder.rs  error.rs  lib.rs  types.rs
crates/rusts-query/: Architecture.md  Cargo.toml
crates/rusts-query/src/: aggregation.rs  error.rs  executor.rs  lib.rs  model.rs  planner.rs  window.rs
crates/rusts-query/tests/: executor_integration.rs
crates/rusts-retention/: Cargo.toml
crates/rusts-retention/src/: error.rs  lib.rs  policy.rs  tiering.rs
crates/rusts-server/: Architecture.md  Cargo.toml
crates/rusts-server/benches/: ingestion.rs  query.rs
crates/rusts-server/src/: main.rs  telemetry.rs
crates/rusts-sql/: Cargo.toml
crates/rusts-sql/src/: error.rs  functions.rs  lib.rs  parser.rs  translator.rs
crates/rusts-storage/: Architecture.md  Cargo.toml
crates/rusts-storage/src/: engine.rs  error.rs  lib.rs  memtable.rs  partition.rs  segment.rs
crates/rusts-storage/src/wal/: mod.rs  reader.rs  writer.rs
docs/: rusts-api-architecture.md  rusts-compression-architecture.md  rusts-index-architecture.md  rusts-pgwire-architecture.md  rusts-query-architecture.md  rusts-retention-architecture.md  rusts-server-architecture.md  rusts-sql-architecture.md  rusts-storage-architecture.md
