[workspace]
resolver = "2"
members = [
    "crates/rusts-core",
    "crates/rusts-storage",
    "crates/rusts-compression",
    "crates/rusts-index",
    "crates/rusts-query",
    "crates/rusts-cluster",
    "crates/rusts-aggregation",
    "crates/rusts-retention",
    "crates/rusts-api",
    "crates/rusts-sql",
    "crates/rusts-server",
    "crates/rusts-importer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["RusTs Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rusts/rusts"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
rusts-core = { path = "crates/rusts-core" }
rusts-storage = { path = "crates/rusts-storage" }
rusts-compression = { path = "crates/rusts-compression" }
rusts-index = { path = "crates/rusts-index" }
rusts-query = { path = "crates/rusts-query" }
rusts-cluster = { path = "crates/rusts-cluster" }
rusts-aggregation = { path = "crates/rusts-aggregation" }
rusts-retention = { path = "crates/rusts-retention" }
rusts-api = { path = "crates/rusts-api" }
rusts-sql = { path = "crates/rusts-sql" }

# Async runtime
tokio = { version = "1.44", features = ["full"] }
async-trait = "0.1"

# Storage
memmap2 = "0.9"
parking_lot = "0.12"
dashmap = "6.1"

# Compression
lz4 = "1.28"
zstd = "0.13"
crc32fast = "1.4"

# Indexing
roaring = "0.10"  # 0.11 has breaking API changes
fxhash = "0.2"

# Data format
arrow = { version = "54" }
parquet = { version = "54" }

# CLI
clap = { version = "4.5", features = ["derive"] }

# API
axum = { version = "0.7", features = ["macros"] }  # 0.8 has breaking changes
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "auth", "limit"] }
hyper = { version = "1.6", features = ["full"] }

# Auth
jsonwebtoken = "9"  # 10 has breaking changes
argon2 = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"  # 2.x/3.x have breaking API changes
prost = "0.13"
toml = "0.8"  # 0.9 has breaking changes

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Testing
tempfile = "3.15"
rand = "0.8"  # 0.9 has breaking changes
criterion = "0.5"  # 0.8 has breaking changes

# Utilities
bytes = "1.10"
chrono = { version = "0.4", features = ["serde"] }
sqlparser = "0.60"
uuid = { version = "1.16", features = ["v4", "serde"] }
once_cell = "1.21"
crossbeam-channel = "0.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
inherits = "release"
debug = true
