[package]
name = "rusts-aggregation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Aggregation and downsampling for RusTs time series database"

[dependencies]
rusts-core = { workspace = true }
rusts-storage = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
