[package]
name = "rusts-cluster"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Clustering support for RusTs time series database"

[dependencies]
rusts-core = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
fxhash = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
