[package]
name = "rusts-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types for RusTs time series database"

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
fxhash = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
num_cpus = "1.16"

[dev-dependencies]
rand = { workspace = true }
serde_json = { workspace = true }
