[package]
name = "rusts-index"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Indexing engine for RusTs time series database"

[dependencies]
rusts-core = { workspace = true }

dashmap = { workspace = true }
roaring = { workspace = true }
fxhash = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tempfile = { workspace = true }
