[package]
name = "rusts-query"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Query engine for RusTs time series database"

[dependencies]
rusts-core = { workspace = true }
rusts-storage = { workspace = true }
rusts-index = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = "1.10"

[dev-dependencies]
rand = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
