[package]
name = "rusts-retention"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Retention policies for RusTs time series database"

[dependencies]
rusts-core = { workspace = true }
rusts-storage = { workspace = true }
rusts-compression = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
