[package]
name = "rusts-sql"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SQL query interface for RusTs time series database"

[dependencies]
rusts-core = { workspace = true }
rusts-query = { workspace = true }

sqlparser = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
regex = "1.10"

[dev-dependencies]
tempfile = { workspace = true }
